tests/invalid/double_label.s
func:
  nop
  call func
  nop
func:
  nop
  